[WebGPU] Fixup debug assertions caught by fuzzer tests https://bugs.webkit.org/show_bug.cgi?id=277032 rdar://132434047

Reviewed by Dan Glastonbury.

Running some of the fuzzer tests in Debug triggers these two
assertions, which were harmless. Correct the assertions.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):

Canonical link: https://commits.webkit.org/281362@main